# NetSquid-PingPong

./: .bumpversion.cfg  CHANGELOG.md  Makefile  README.md  requirements.txt  setup.cfg
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/modules/: models.rst  protocols.rst
examples/: example_pingpongprotocol.py
netsquid_pingpong/: models.py  protocols.py
tests/: test_models.py  test_protocols.py
