
[metadata]
name = netsquid-pingpong
version = 0.1.0
author = Loek Nijsten
author-email = loek.nijsten@tno.nl
description = Example snippet made for the beta release competition.
license = Apache-2.0
home-page = https://github.com/SoftwareQuTech/NetSquid-Snippets/netsquid-pingpong

[netsquid]
pypi-server = pypi.netsquid.org
